[FIX] point_of_sale: add padding to pos receipt
Issue:
    In 16.0 only, When sending a POS receipt by email, the receipt
    displays correctly in the preview within the POS app. However,
    the attached receipt in the email appears cropped, and the company
    logo is not centered.

Steps to reproduce:
    1. On runbot, go to the POS app.
    2. Start a sesion. add a product, a customer and pay.
    3. Click on send by email arrow button.
    4. check receipt on mailhog.

opw-4140950

X-original-commit: 5221bf2f8d280a5e15ec09ace386d6321efd5235

--- a/addons/point_of_sale/static/src/css/pos_receipts.css
+++ b/addons/point_of_sale/static/src/css/pos_receipts.css
@@ -82,3 +82,8 @@
     /*rtl:ignore*/
     direction: ltr;
 }
+
+.styled-receipt {
+    padding: 15px;
+    padding-bottom: 30px;
+}
